[gd_scene load_steps=13 format=3 uid="uid://dxsdx21bpqdk"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_00qm6"]
[ext_resource type="PackedScene" uid="uid://dvt2liyu3nvqe" path="res://scenes/player.tscn" id="2_4hrb5"]
[ext_resource type="PackedScene" uid="uid://8wlng5j7gxyb" path="res://scenes/enemy.tscn" id="2_rccw1"]
[ext_resource type="PackedScene" uid="uid://mlr8jrnww76s" path="res://scenes/med_enemy.tscn" id="3_2rhwc"]
[ext_resource type="AudioStream" uid="uid://bilqdtwfkds2q" path="res://assets/audio/laserSmall_003.ogg" id="4_eqn4p"]
[ext_resource type="PackedScene" uid="uid://bqp6p342xvdxh" path="res://scenes/hud.tscn" id="4_w50o4"]
[ext_resource type="PackedScene" uid="uid://dgwgcqtcbigjk" path="res://scenes/game_over_screen.tscn" id="5_a3qh6"]
[ext_resource type="AudioStream" uid="uid://b1pgmslpvo037" path="res://assets/audio/explosionCrunch_000.ogg" id="5_wty6y"]
[ext_resource type="AudioStream" uid="uid://c8570gr4ynekk" path="res://assets/audio/explosionCrunch_002.ogg" id="6_bh30a"]
[ext_resource type="Texture2D" uid="uid://cgeploout8yrn" path="res://assets/textures/PixelBackground.webp" id="6_ea3nx"]
[ext_resource type="Texture2D" uid="uid://w8r34r61qc3p" path="res://assets/textures/Star with diffraction spikes frame_2.png" id="7_46kbl"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2f4o5"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(960, 1, 1)
direction = Vector3(0, -1, 0)
spread = 0.0
initial_velocity_min = -1000.0
initial_velocity_max = -1000.0
gravity = Vector3(0, 0, 0)

[node name="Game" type="Node2D"]
script = ExtResource("1_00qm6")
enemy_scenes = Array[PackedScene]([ExtResource("2_rccw1"), ExtResource("3_2rhwc")])

[node name="SFX" type="Node2D" parent="."]

[node name="LaserSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_eqn4p")

[node name="HitSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_wty6y")

[node name="ExplodeSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_bh30a")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="UILayer" instance=ExtResource("4_w50o4")]

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("5_a3qh6")]
visible = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 1080)

[node name="PurpleStars" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("6_ea3nx")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1920, 1080)

[node name="StarsParticleEffect" type="GPUParticles2D" parent="."]
position = Vector2(960, -49)
amount = 20
process_material = SubResource("ParticleProcessMaterial_2f4o5")
texture = ExtResource("7_46kbl")
lifetime = 5.0
preprocess = 5.0

[node name="EnemySpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource("2_4hrb5")]
position = Vector2(271, 897)

[node name="PlayerSpawnPos" type="Marker2D" parent="."]
position = Vector2(960, 970)

[node name="LaserContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
